# mcp-florence2

./: .gitignore  .mcpbignore  .pre-commit-config.yaml  Dockerfile  README.md  manifest.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: release.yml
src/mcp_florence2/: __init__.py  cli.py  florence2.py  server.py  subprocess.py
tests/: test_server.py
